--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,13 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     #- run: npm test
+    
+    
+    - name: Upload Binaries via FTP
+      uses: SamKirkland/FTP-Deploy-Action@4.0.0
+      with:
+        server: btcis.me
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: /
+        local-dir: ./dist/
