--- a/btcis-me/package.json
+++ b/btcis-me/package.json
@@ -27,6 +27,7 @@
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
+    "@microsoft/signalr": "^7.0.5",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
