--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,4 +38,4 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         server-dir: /
-        local-dir: ./dist/btc-app/
+        local-dir: ./www/
