--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
     "@microsoft/signalr": "^7.0.5",
+    "angularx-qrcode": "^16.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
