--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^7.0.0",
     "@microsoft/signalr": "^7.0.5",
     "angularx-qrcode": "^16.0.0",
+    "crypto-js": "^4.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -47,6 +48,7 @@
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.0.3",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
